Fixed broken in-place editing code on CHR page
Added the inplace-editor plugin - comments at the top of the js file.
Converted all the 'inplace-editors' in the CHR show page to use the
jquery plugin.

--- a/app/sass/base.scss
+++ b/app/sass/base.scss
@@ -126,3 +126,7 @@ form.delete-link {
   background-color: #aeaeae;
   opacity: 0.7;
 }
+
+.inplace-hover {
+  @include box-shadow(0px 0px 5px darken(#E0EEE0, 55%));
+}
